# censusdis-cli

./: .gitignore  PLAN.md  README.md  flake.nix  main.py  pyproject.toml
.claude/: settings.json
.ruler/: AGENTS.md  cli-commands.md  code-quality.md  development-commands.md  project-overview.md  python-guidelines.md  ruler.toml  testing-strategy.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
censusdis_cli/: __init__.py  cli.py
docs/: CLI_REFERENCE.md
src/: cli.py
tests/: test_cli.py
