[project]
name = "censusdis-cli"
version = "0.1.0"
description = "Agent-friendly CLI for Census data discovery with JSON output"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "censusdis>=1.4.2",
    "click>=8.2.1",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "tdd-guard-pytest>=0.1.2",
    "types-click>=7.1.8",
]
